<resources>
    <string name="app_name">News App</string>
    <string name="top_headline">Top News</string>
    <string name="news_images">news_images</string>
    <string name="business">BUssines</string>
    <string name="entertainment">Entertain</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sport</string>
    <string name="technology">Tech</string>
    <string name="this_is_imageview_reset">ImageView reset</string>
    <string name="all_news">All News</string>
    <string name="this_is_iv_all_news">Iv for all news</string>
    <string name="search">Search</string>
    <string name="result_is_empty">No Result</string>
    <string name="connection_error">Connection Error</string>
    <string name="server_error">Server Error</string>
</resources>