<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/your_custom_primary_color"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_home_24"
            app:navigationIconTint="@color/white"
            app:title="News App"
            app:titleTextAppearance="@style/ToolbarTitleStyle"
            app:titleTextColor="@color/white" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/this_is_imageview_reset"
                android:src="@drawable/baseline_restart_alt_24"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/hsv_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/hsv_category"
                app:layout_constraintTop_toTopOf="@id/hsv_category" />

            <HorizontalScrollView
                android:id="@+id/hsv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toStartOf="@id/iv_reset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:textColor="?attr/colorOnSurface"
                        app:chipBackgroundColor="@color/white"
                        app:chipIcon="@drawable/chip_business" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entertainment"
                        android:textColor="?attr/colorOnSurface"
                        app:chipBackgroundColor="@color/white"
                        app:chipIcon="@drawable/chip_entertainment" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/general"
                        android:textColor="?attr/colorOnSurface"
                        app:chipBackgroundColor="@color/white"
                        app:chipIcon="@drawable/chip_general" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health"
                        android:textColor="?attr/colorOnSurface"
                        app:chipBackgroundColor="@color/white"
                        app:chipIcon="@drawable/chip_health" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/science"
                        android:textColor="?attr/colorOnSurface"
                        app:chipBackgroundColor="@color/white"
                        app:chipIcon="@drawable/chip_science" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sports"
                        android:textColor="?attr/colorOnSurface"
                        app:chipBackgroundColor="@color/white"
                        app:chipIcon="@drawable/chip_sports" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/technology"
                        android:textColor="?attr/colorOnSurface"
                        app:chipBackgroundColor="@color/white"
                        app:chipIcon="@drawable/chip_technology" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_latest_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/hsv_category"
                tools:itemCount="1"
                tools:listitem="@layout/item_news" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_headline_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/hsv_category">

                <ImageView
                    android:id="@+id/iv_headline_error"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="70dp"
                    android:src="@drawable/baseline_error_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_headline_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_is_empty"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_headline_error" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/include_headline_loading"
                layout="@layout/shimmer_headline_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/hsv_category" />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="360dp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:endIconDrawable="@drawable/baseline_search_24"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="aaa"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search"
        tools:listitem="@layout/item_all" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_error_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_search">

        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_error_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_is_empty"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@+id/include_loading"
        layout="@layout/shimmer_everything_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_search" />


</androidx.constraintlayout.widget.ConstraintLayout>